styles/global.css
@import "~antd/dist/antd.css";

html,
body {
  padding: 0;
  margin: 0;
  font-family: "Roboto Mono", Courier, monospace;
  -moz-user-select: -moz-none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #f5f5f5;
}

::-webkit-scrollbar {
  width: 6px;
  background-color: #f5f5f5;
}

::-webkit-scrollbar-thumb {
  background-color: #041429;
}

* {
  box-sizing: border-box;
}

#nprogress {
  pointer-events: none;
}

#nprogress .bar {
  background: white;
  position: fixed;
  z-index: 9999;
  top: 0;
  left: 0;
  width: 100%;
  height: 3px;
}

